--- a/index.html
+++ b/index.html
@@ -48,15 +48,43 @@
         </aside>
     </header>
 
-
-    <main>
-        <!-- Imagens Responsivas -->
+                            <!-- Imagens Responsivas -->
        <!--- <picture>
             <img src="./images/ícones de usuário/178 - P8qZD6Y.png" alt="">
             <source media="(min-width: 650px)" srcset="./images/ícones de usuário/102 - 1SdlYmc.png">
             <source media="(min-width: 465px)" srcset="/images/ícones de usuário/101 - 4HP8NGK.png">
         </picture> --->
        
+    <main>
+        <div class="BannersPrincipais">
+            <div id="banner-text">
+                <!-- Banner principal Narcos e textos -->
+                <h3 id="netflixTitle">NETFLIX ORIGINALS</h3>
+                <h1 id="narcosTitle">NARCOS</h1>
+                <h4 id="temporadatitle">Temporada 3</h4>
+                <p id="paragraphtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde earum ipsam veniam in ea quibusdam architecto, atque excepturi vero corrupti nostrum non cum maiores aperiam consequuntur quae obcaecati blanditiis repudiandae?</p>
+                
+                <!-- Botões de Assistir e Adicionar a lista -->
+             <div class="buttons">
+                <button>
+                    <img src="./images/interface icons/play.svg" alt="">
+                    <label>Assistir</label>
+                </button>
+                <button>
+                    <img src="./images/interface icons/add.svg" alt="">
+                    <label>Adicionar a lista</label>
+                </button>
+             </div>
+            </div>
+        </div>  
+        <h3 id="Series-tv">Séries TV</h3><br><br>
+        <!-- Filmes -->
+        <section id="sessão-de-filmes">
+            <div class="box-series" id="box1"></div>
+            <div class="box-series" id="box2"></div>
+            <div class="box-series" id="box3"></div>
+            <div class="box-series" id="box4"></div>  
+        </section>
     </main>
 
 
