--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div id="banner-text">
                 <!-- Banner principal Narcos e textos -->
                 <h3 id="netflixTitle">NETFLIX ORIGINALS</h3>
-                <h1 id="narcosTitle">NARCOS</h1>
+                <h1 class="narcosTitle">NARCOS</h1>
                 <h4 id="temporadatitle">Temporada 3</h4>
                 <p id="paragraphtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde earum ipsam veniam in ea quibusdam architecto, atque excepturi vero corrupti nostrum non cum maiores aperiam consequuntur quae obcaecati blanditiis repudiandae?</p>
                 
@@ -77,7 +77,7 @@
              </div>
             </div>
         </div>  
-        <h3 id="Series-tv">Séries TV</h3><br><br>
+        <h3 class="series-tv">Séries TV</h3><br><br>
         <!-- Filmes -->
         <section id="sessão-de-filmes">
             <div class="box-series" id="box1"></div>
@@ -85,6 +85,49 @@
             <div class="box-series" id="box3"></div>
             <div class="box-series" id="box4"></div>  
         </section>
+        <!-- Em alta -->
+        <h3 class="series-tv">Em alta</h3><br><br>
+        <section id="emAlta">
+            <div class="box-series" id="box5"></div>
+            <div class="box-series" id="box6"></div>
+            <div class="box-series" id="box7"></div>
+            <div class="box-series" id="box8"></div>
+        </section>
+        <!-- Terror -->
+        <h3 class="series-tv">Terror</h3><br><br>
+        <section id="terror">
+            <div class="box-series" id="box9"></div>
+            <div class="box-series" id="box10"></div>
+            <div class="box-series" id="box11"></div>
+            <div class="box-series" id="box12"></div>
+        </section>
+        <!-- Suspense -->
+        <h3 class="series-tv">Suspense</h3><br><br>
+        <section id="suspense">
+            <div class="box-series" id="box13"></div>
+            <div class="box-series" id="box14"></div>
+            <div class="box-series" id="box15"></div>
+            <div class="box-series" id="box16"></div>
+        </section>
+        <!-- Top da Semana -->
+        <h3 class="series-tv">Top da Semana</h3><br><br>
+        <section id="topDaSemana">
+            <div class="box-series" id="box17"></div>
+            <div class="box-series" id="box18"></div>
+            <div class="box-series" id="box19"></div>
+            <div class="box-series" id="box20"></div>
+        </section>
+        <!-- banner Polonais -->
+        <div class="BannersPrincipais" id="polonais">
+            <div id="banner-text2">
+                <!-- Banner principal Narcos e textos -->
+                <h3 id="netflixTitle">CINEMA FRANCÊS</h3>
+                <h1 class="narcosTitle">Polonais</h1>
+                <h4 id="temporadatitle">Temporada 3</h4>
+                <p id="paragraphtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde earum ipsam veniam in ea quibusdam architecto, atque excepturi vero corrupti nostrum non cum maiores aperiam consequuntur quae obcaecati blanditiis repudiandae?</p>
+             </div>
+            </div>
+        </div>  
     </main>
 
 
